alpha/event/static/styles/event/event-details.css
/* ... */
.event-wrapper .event-details .event-venue span {
    width: 195px;
    white-space: nowrap;
    overflow: hidden;
    display: block;
    text-overflow: ellipsis;
}

.searchpad-event-wrapper .event-details .event-venue-name,
.event-wrapper .event-details .event-venue-name {
    width: 195px;
    white-space: normal;
}

.searchpad-event-wrapper .event-details .event-venue-name {
    width: 134px;
}

.searchpad-event-wrapper .event-details .title-wrapper,
.event-wrapper .event-details .title-wrapper {
    position: relative;    
    border-bottom: 1px solid #02345c;
    width: 100%;
}

.searchpad-event-wrapper .event-details .event-price,
.event-wrapper .event-details .event-price {
    color: #0260bb;        
    font-weight: bold;    
    vertical-align: middle;
    display: block;
    white-space: nowrap;    
    overflow: hidden;
    text-overflow: ellipsis;
    font-size: 13px;
}

.event-wrapper .event-details .event-price {
    width: 190px;
    height: 40px;
    line-height: 40px;
}

.searchpad-event-wrapper .event-details .event-price {
    width: 240pc;
    height: 26px;
    line-height: 26px;
    padding-top: 20px;
}

.searchpad-event-wrapper .event-details .title-wrapper .action-buy-tickets,
.event-wrapper .event-details .title-wrapper .action-buy-tickets {
    position: absolute;
    display: block;    
    text-align: center;
    vertical-align: middle;
    color: #0260bb;
    right: 0;    
    border: 1px solid #bedefe;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    font-weight: bold;

    box-shadow: 2px 2px 6px #eee;
    font-size: 14px;
}

.event-wrapper .event-details .title-wrapper .action-buy-tickets {
    width: 130px;
    height: 30px;
    line-height: 30px;
    top: 4px;
}

.searchpad-event-wrapper .event-details .title-wrapper .action-buy-tickets {
    width: 85px;
    height: 22px;
    line-height: 22px;
    top: -3px;
    font-size: 11px;
}

.event-wrapper .event-details .title-wrapper .action-buy-tickets:hover {
    box-shadow: 2px 2px 6px #eaeaea;
}

.searchpad-event-wrapper .event-details-bottom .event-actions,
.event-wrapper .event-details-bottom .event-actions {    
    border-top: 1px solid #02345c;
    border-bottom: 1px solid #02345c;    
}

.event-wrapper .event-details-bottom .event-actions {
    width: 341px;
    padding-top: 11px;
    padding-bottom: 11px;
    margin-bottom: 10px;
}

.searchpad-event-wrapper .event-details-bottom .event-actions {
    width: 263px;
    padding-top: 7px;
    padding-bottom: 7px;
    margin-bottom: 10px;

}

.searchpad-event-wrapper .event-actions .relative-wrapper,
.event-wrapper .event-actions .relative-wrapper {
    position: relative;
    display: inline-block;
    margin-left: 5px;
    margin-right: 5px;
}

.searchpad-event-wrapper .event-details-bottom .event-actions .relative-wrapper {
    margin: 0;
    width: 100%;
}

.searchpad-event-wrapper .event-actions a,
.event-wrapper .event-actions a{
    display: block;
    background: #0260bb;
    text-align: center;
    text-transform: uppercase;
    color: #fff;
}

.event-wrapper .event-actions a {
    width: 101px;
    height: 16px;
    line-height: 16px;
    font-size: 13px;
}

.searchpad-event-wrapper .event-actions a {
    width: 100%;
    display: block;
    height: 16px;
    line-height: 16px;
    font-size: 11px;   
}

.searchpad-event-wrapper .event-actions table {
    width: 100%;
}

.searchpad-event-wrapper .event-actions table td {
    width: 33%;
}

.searchpad-event-wrapper .event-actions table td.with-right-padding {
    padding-right: 5px;
}

.searchpad-event-wrapper .event-actions .action-view-site,
.event-wrapper .event-actions .action-view-site {
    background: #6e6d6d;    
}

.event-wrapper .tags{
    width: 540px;
    padding-left:25px;
    font-size:11px;
    color:#5dacfd;
    background:url(/static/images/tag_icon.png) left no-repeat;
}

.event-wrapper .tags a {
    color:#5dacfd;
    text-decoration: none;
}
.event-wrapper .tags a:hover {
    color: #0168cd;
}

.content-wrapper .event-details-primary-content h1 a {
    padding-left: 15px;
}


/*  Old code */
.event-details-primary-content {
    width: 684px;
}

.event-details-block .event-details {
    display: inline-block;
    vertical-align: top;
    padding-right: 3px;    
    white-space: nowrap;
}

.event-details-block .event-details .title a {
    color: #06c;
    text-decoration: none;
    cursor: pointer;

    display: inline-block;
    white-space: nowrap;
    overflow: hidden;
    width: 100%;
    text-overflow: ellipsis;
}

.event-wrapper .event-details .title-wrapper,
.searchpad-event-wrapper .event-details .title-wrapper {
    position: relative;
    border-bottom: 1px solid #02345c;    
}

.event-wrapper .event-details .title-wrapper {
    
}

.event-wrapper .event-details .event-date-wrapper {
    color: #0260bb;
    margin-left: 10px;
    margin-top: 0;
}

.event-wrapper .event-details .event-description {
    margin:0;
    margin-top:18px;
    color: #000;
    width: 250px;
    white-space: normal;
    margin-left: 30px;
}

.event-wrapper .event-details .event-actions {
    margin-top: 12px;
}

.event-wrapper .event-details .event-actions table {
    width: 100%;
    border-spacing:0;
    border-collapse:collapse;
}

.event-wrapper .event-details .event-actions td {
    border-bottom: 1px solid #ddd;
    width: 50%;
    max-width: 80px;
    height: 22px;
    max-height: 22px;
    min-height: 22px;    
}

.event-wrapper .event-details .event-actions td a {
    text-decoration: none;
    padding-left: 22px;
    color: #0168cd;
    position: relative;
    min-width: 30px;
    height:100%;
    display: inline-block;
    vertical-align: middle;
    line-height: 22px;
}

.event-wrapper .event-details .event-actions td.social-buttons a {
    line-height: inherit;
}

.event-wrapper .event-description {
    margin: 13px;
}

.tickets-popup {
    display:none;
    padding-top:20px;    
}
/* ... */

